# serial2serial

./: Makefile.am  README.md  configure.ac  def.h  main.c
utils/: serial2serial.sh
